--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
@@ -14,7 +15,7 @@
             android:layout_height="@dimen/_100sdp"
             android:src="@drawable/nebourlogo"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_10sdp"/>
+            android:layout_marginTop="@dimen/_30sdp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +42,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mobile Number"
+        android:text="Enter Id"
         android:textColor="@color/black"
         android:layout_marginTop="@dimen/_30sdp"
         android:layout_gravity="left"
@@ -68,7 +69,7 @@
             <ImageView
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/call"
+                android:src="@drawable/uuesr"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_10sdp"/>
 
@@ -77,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:hint="+91 XXXX XX XXXX"
+                android:hint="34 XXXX XX 2354"
                 android:background="#00000000"/>
 
         </LinearLayout>
@@ -133,7 +134,7 @@
     </com.google.android.material.card.MaterialCardView>
 
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_45sdp"
         android:layout_marginLeft="@dimen/_40sdp"
@@ -156,7 +157,7 @@
             android:textStyle="normal"
             android:textSize="@dimen/_20sdp"/>
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:layout_width="wrap_content"
