--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -113,6 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="190dp"
             android:padding="@dimen/_16sdp"
+                    android:id="@+id/add_Maintanace"
             android:layout_margin="20dp"
             app:cardCornerRadius="20dp"
             app:cardBackgroundColor="@color/white"
@@ -151,6 +152,7 @@
             android:padding="@dimen/_16sdp"
             android:layout_margin="20dp"
             app:cardCornerRadius="20dp"
+            android:id="@+id/admin_evets"
             app:cardBackgroundColor="@color/white"
             app:strokeWidth="2dp"
             app:strokeColor="@color/blue"
@@ -222,6 +224,7 @@
             android:layout_height="190dp"
             android:padding="@dimen/_16sdp"
             android:layout_margin="20dp"
+            android:id="@+id/admin_helpdesk"
             app:cardCornerRadius="20dp"
             app:cardBackgroundColor="@color/white"
             app:strokeWidth="2dp"
