--- a/app/src/main/res/layout/activity_user_complain.xml
+++ b/app/src/main/res/layout/activity_user_complain.xml
@@ -8,6 +8,15 @@
     android:orientation="vertical"
     tools:context=".UserComplainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Complaints"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewComplaints"
         android:layout_width="match_parent"
