--- a/app/src/main/res/menu/nav_drawer_manu.xml
+++ b/app/src/main/res/menu/nav_drawer_manu.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_home" android:title="Home"
-        android:icon="@drawable/uuesr" />
+        android:icon="@drawable/uuesr"
+        android:iconTint="@color/blue"/>
 
     <item android:id="@+id/nav_logout" android:title="Logout"
-        android:icon="@drawable/uuesr" />
+        android:icon="@drawable/logout"
+        android:iconTint="@color/blue"/>
 </menu>
